anjali push tha code

--- a/home.html
+++ b/home.html
@@ -48,7 +48,7 @@
                             </a>
 
                             <div
-                                class="dropdown-menu mega-dropdown shadow-lg p-4 mt-3">
+                                class="dropdown-menu mega-dropdown shadow-lg p-4 " style="    top: 89%";>
                                 <div class="row g-4">
 
                                     <div class="col-md-4">
@@ -517,7 +517,7 @@
                             <p>Privacy</p>
                             <p>Terms of Service</p>
                             <p>How to Pay</p>
-                            <button class="btn btn-sm button-footer mt-2">Make
+                            <button class="btn btn-sm button-footer mt-2 py-2 px-4">Make
                                 Payment</button>
                         </div>
 
