--- a/pricing.html
+++ b/pricing.html
@@ -1,144 +1,149 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Free Trial Design</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        /* --- Unique CSS Styles from above section --- */
-         @font-face {
-    font-family: "MyFont";
-    src: url("assets/fonts/TTF/ClashGrotesk-Variable.ttf") format("truetype"),
-         url("assets/fonts/OTF/ClashGrotesk-Regular.otf") format("opentype");
-    font-weight: normal;
-    font-style: normal;
-}
- :root {
-    --font-primary: "MyFont", Clash Grotesk;
-    --font-secondary: "Clash Grotesk", sans-serif;
-    }
-        /* Base Styles */
-            body {
-    font-family: var(--font-primary);
-}
-
-        /* --- Left Section (Accordion/FAQ) Styles --- */
-        .accordion {
-    --bs-accordion-bg: transparent !important;
-    background: transparent !important;
-}
-        .app-heading-green {
-            color: #49c47e;
-            font-weight: 700;
-            font-size: 41px;
-        }
-
-        .app-accordion-item {
-            border-color: #999999;
-            padding-top: 20px;
-            padding-bottom: 20px;
-        }
-
-        .app-accordion-button {
-            color: #000;
-            font-weight: 500;
-            background-color: transparent;
-            padding: 0;
-            box-shadow: none !important; /* !important to be safe against default focus styles */
-            border: none;
-        }
-
-        .app-accordion-button:not(.collapsed) {
-            color: #000;
-            background-color: transparent;
-        }
-
-        /* Icon replacement for Accordion */
-        .app-accordion-button:not(.collapsed)::after,
-        .app-accordion-button.collapsed::after {
-            background-image: url('image/pricing/plus.svg');
-            font-size: 1.2rem;
-            color: #a0a0a0;
-            transform: rotate(0deg);
-        }
-
-        .app-accordion-button:not(.collapsed)::after {
-            background-image: url('image/pricing/minus.svg');
-        }
-
-        .app-accordion-body {
-            padding: 10px 0 0 0;
-            color: #666;
-            font-size: 0.9rem;
-        }
-
-        .app-faq-accordion {
-            border: none;
-            background-color: transparent;
-        }
-
-        /* --- Right Section (Features & Button) Styles --- */
-
-        .app-right-box {
-            background-color: #F6F6F7;
-            border-radius: 8px;
-            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
-        }
-        .app-right-box h4{
-          color: #4338CA;
-          font-size: 40px;
-        }
-        .app-list-separator {
-            border-top: 2px solid #999999;
-            width: 100%;
-        }
-
-        .app-feature-list {
-            color: #333;
-        }
-
-        .app-feature-list li {
-            padding-left: 1.8rem;
-            line-height: 2.2rem;
-            position: relative;
-            font-size: 1.05rem;
-        }
-
-        .app-feature-list li::before {
-            content: "";
-    position: absolute;
-    left: 0;
-    top: 10px;
-    width: 20px;          /* icon width */
-    height: 20px;         /* icon height */
-    background-image: url('image/pricing/right.svg');  /* <-- add your image */
-    background-size: contain;
-    background-repeat: no-repeat;
-        }
-        
-
-        .app-signup-btn {
-            background-color: #49c47e;
-            border-color: #49c47e;
-            color: #fff;
-            padding: 12px 20px;
-            font-weight: 600;
-            font-size: 1.1rem;
-            border-radius: 50px;
-        }
-
-        .app-signup-btn:hover {
-            background-color: #3aa666;
-            border-color: #3aa666;
-        }
-        .accordion{
-            background-color: transparent !important;
-        }
-    </style>
-</head>
-<body>
-
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Class-Pro</title>
+        <!-- Bootstrap 5 -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+        <!-- swiper slider link -->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
+        <!-- Custom CSS -->
+        <link rel="stylesheet" href="style.css">
+    </head>
+    <body>
+        <!-- 🔹 NAVBAR -->
+        <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm py-3">
+            <div class="container">
+                <a class="navbar-brand fs-3 main-logo" href="#">
+                    <img src="image/home/Classpro full website/header/classpro-logo 2 copy.svg" alt>
+                </a>
+                <button
+                    class="navbar-toggler"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav"
+                >
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-lg-center">
+                        <!-- FEATURES -->
+                        <li class="nav-item dropdown mx-2 position-static">
+                            <a class="nav-link fw-semibold d-flex align-items-center" href="#" data-bs-toggle="dropdown">
+                                <span class="me-1">Features</span>
+                                <img
+                                    src="image/home/Desktop - Classpro Landing Page/header/Vector 58.svg"
+                                    width="12"
+                                    height="7"
+                                    class="mt-1"
+                                >
+                            </a>
+                            <div class="dropdown-menu mega-dropdown shadow-lg p-4" style="top: 89%;">
+                                <div class="row g-4">
+                                    <div class="col-md-4">
+                                        <div class="feature-item">
+                                            Transparent
+                                            Fee Management
+                                        </div>
+                                        <div class="divider"></div>
+                                        <div class="feature-item">
+                                            Share
+                                            Notes/Study Materials
+                                        </div>
+                                        <div class="divider"></div>
+                                        <div class="feature-item">
+                                            Homework &
+                                            Assignments
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="feature-item">
+                                            Biometric
+                                            Attendance
+                                        </div>
+                                        <div class="divider"></div>
+                                        <div class="feature-item">
+                                            Student
+                                            Performance
+                                        </div>
+                                        <div class="divider"></div>
+                                        <div class="feature-item">
+                                            Insightful
+                                            Reports
+                                        </div>
+                                    </div>
+                                    <div class="col-md-4">
+                                        <div class="feature-item">
+                                            Student/Parent
+                                            App
+                                        </div>
+                                        <div class="divider"></div>
+                                        <div class="feature-item">
+                                            Send
+                                            Communication & Reminders
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <!-- COMPANY -->
+                        <li class="nav-item dropdown mx-2">
+                            <a class="nav-link fw-semibold d-flex align-items-center gap-1" href="#" data-bs-toggle="dropdown">
+                                Company
+                                <img
+                                    src="image/home/Desktop - Classpro Landing Page/header/Vector 58.svg"
+                                    width="12"
+                                    height="7"
+                                    class="mt-1"
+                                >
+                            </a>
+                            <div class="dropdown-menu small-dropdown shadow-lg p-4 mt-3">
+                                <div class="feature-item">Career</div>
+                                <div class="divider"></div>
+                                <div class="feature-item">Team</div>
+                                <div class="divider"></div>
+                                <div class="feature-item">About</div>
+                            </div>
+                        </li>
+                        <li class="nav-item mx-2">
+                            <a class="nav-link fw-semibold" href="#">Pricing</a>
+                        </li>
+                        <!-- RESOURCES -->
+                        <li class="nav-item dropdown mx-2">
+                            <a class="nav-link fw-semibold d-flex align-items-center gap-1" href="#" data-bs-toggle="dropdown">
+                                Resources
+                                <img
+                                    src="image/home/Desktop - Classpro Landing Page/header/Vector 58.svg"
+                                    width="12"
+                                    height="7"
+                                    class="mt-1"
+                                >
+                            </a>
+                            <div class="dropdown-menu small-dropdown shadow-lg p-4 mt-3">
+                                <div class="feature-item">Blogs</div>
+                                <div class="divider"></div>
+                                <div class="feature-item">Testimonials</div>
+                            </div>
+                        </li>
+                        <li class="nav-item mx-2">
+                            <a class="nav-link fw-semibold" href="#">
+                                Contact
+                                Us
+                            </a>
+                        </li>
+                        <li class="nav-item ms-2 ms-lg-3">
+                            <button class="btn btn-outline-success px-4 fornw-bg  rounded-pill">
+                                Log In
+                            </button>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <!-- nav bar end -->
+<!-- main  -->
+<section class="pricing_page">
 <div class="container my-5">
   <div class="row align-items-start app-main-row g-5">
     <div class="col-md-6 app-left-column">
@@ -245,8 +250,94 @@
     </div>
   </div>
 </div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
+</section>
+<!-- footer -->
+        <section class="india-hero pt-5">
+            <div class="container py-lg-5 py-sm-3">
+                <div class="row align-items-center">
+                    <div class="col-lg-6">
+                        <h1 class="display-5">
+                            Made in India.
+                            <br>
+                            Made for the World.
+                        </h1>
+                    </div>
+                    <div class="col-lg-6 text-lg-end new-try">
+                        <a href="#" class="btn demo-btn px-4 py-3">Get Your Free Demo</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- FOOTER SECTION -->
+        <footer class="footer-section text-white py-5">
+            <div class="container">
+                <div class="row gy-4">
+                    <!-- CONTACT -->
+                    <div class="col-6 col-md-3">
+                        <h6 class="fw-bold mb-3">CONTACT</h6>
+                        <p>+91-76666 62330</p>
+                        <p>Support Helpdesk</p>
+                        <p>Contact Us</p>
+                    </div>
+                    <!-- ABOUT US -->
+                    <div class="col-6 col-md-3">
+                        <h6 class="fw-bold mb-3">ABOUT US</h6>
+                        <p>Blog</p>
+                        <p>Engineering Blog</p>
+                        <p>Careers</p>
+                        <p>Team</p>
+                        <p>Privacy</p>
+                        <p>Terms of Service</p>
+                        <p>How to Pay</p>
+                        <button class="btn btn-sm button-footer mt-2 py-2 px-4">
+                            Make
+                                Payment
+                        </button>
+                    </div>
+                    <!-- PRODUCT -->
+                    <div class="col-6 col-md-3">
+                        <h6 class="fw-bold mb-3">PRODUCT</h6>
+                        <p>Tour</p>
+                        <p>Plans & Pricing</p>
+                        <p>Security</p>
+                        <h6 class="fw-bold mt-4 mb-3">EXTRAS</h6>
+                        <p>Download Attendpro</p>
+                        <p>Examjoy</p>
+                        <p>Download TeamViewer</p>
+                    </div>
+                    <!-- ADMIN APP + RESOURCES -->
+                    <div class="col-6 col-md-3">
+                        <h6 class="fw-bold mb-3">ADMIN APP</h6>
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" class="img-fluid mb-2" width="130">
+                        <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" class="img-fluid mb-4" width="130">
+                        <h6 class="fw-bold mb-3">RESOURCES</h6>
+                        <p>Free Resources</p>
+                        <p>Case Studies</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </section>
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script>
+        var swiper = new Swiper(".mySwiper", {
+            slidesPerView: 5,
+            spaceBetween: 30,
+            loop: true,
+            autoplay: {
+                delay: 1500,
+                disableOnInteraction: false,
+            },
+            breakpoints: {
+                320: { slidesPerView: 2 },
+                576: { slidesPerView: 3 },
+                768: { slidesPerView: 4 },
+                992: { slidesPerView: 5 }
+            }
+        });
+    </script>
 </body>
 </html>
