anjali pull tha code

--- a/home.html
+++ b/home.html
@@ -151,8 +151,9 @@
         <!-- nav bar end -->
 
         <!-- 🔹 HERO SECTION -->
-        <section class="hero-section ">
-            <div class="container box-image/home py-5">
+        <section class="hero-section  ">
+            <div class="box-image">
+            <div class="container  py-5">
     <div class="row align-items-center">
 
         <!-- LEFT TEXT -->
@@ -177,12 +178,13 @@
 
         <!-- RIGHT CARD -->
         <div class="col-lg-5 col-md-6 text-center">
-            <div class="right-card shadow-sm p-3 bg-white rounded-4 position-relative mx-auto">
+            <div class="right-card p-3 position-relative mx-auto">
                 <img src="image/home/Group 140.png" class="main-hero-img" alt="">
             </div>
         </div>
 
     </div>
+</div>
 </div>
 
             <!-- swiper slider -->
@@ -193,23 +195,23 @@
         <div class="swiper-wrapper">
 
             <div class="swiper-slide d-flex justify-content-center">
-                <img src="image/home/1.png" class="logo-img">
+                <img src="image/home/4.png" class="logo-img">
             </div>
 
             <div class="swiper-slide d-flex justify-content-center">
-                <img src="image/home/1.png" class="logo-img">
+                <img src="image/home/5.png" class="logo-img">
             </div>
 
             <div class="swiper-slide d-flex justify-content-center">
-                <img src="image/home/1.png" class="logo-img">
+                <img src="image/home/3.png" class="logo-img">
             </div>
 
             <div class="swiper-slide d-flex justify-content-center">
-                <img src="image/home/1.png" class="logo-img">
+                <img src="image/home/2.png" class="logo-img">
             </div>
 
             <div class="swiper-slide d-flex justify-content-center">
-                <img src="image/home/1.png" class="logo-img">
+                <img src="image/home/6.png" class="logo-img">
             </div>
 
             <div class="swiper-slide d-flex justify-content-center">
@@ -319,7 +321,7 @@
             </div>
             <!-- men image/home -->
 
-            <div class="container men-image/home ">
+            <div class="container men-image">
                 <div class="row align-items-center">
 
                     <div class="col-md-7 col-sm-12  text-content men-containt">
@@ -343,7 +345,9 @@
                 <h1 class="heading-main">
                     Let’s Replace <span class="text-muted">.doc, .xls,
                         .pdf</span><br>
-                    With An <span class="green">Efficient Software</span> Made
+                      <span style="color: #1F1A63 !important;">With An</span>
+
+                     <span class="green">Efficient Software</span> Made
                     Just For You
                 </h1>
 
@@ -387,7 +391,7 @@
             </div>
 
      <!-- Trusted By Section -->
-<div class="  trusted-section full-image/home d-flex align-items-center">
+<div class="  trusted-section full-image d-flex align-items-center">
     <div class="container text-center">
 
       
@@ -395,13 +399,13 @@
         <div class="row text-white for-display">
 
             <div class="col-md-6 mb-3">
-                <h1 class="trusted-number">7600+</h1>
-                <p class="trusted-text">Educators</p>
+                <h1 class="trusted-number gradient-text">7600+</h1>
+                <p class="trusted-text ">Educators</p>
             </div>
 
             <div class="col-md-6 mb-3">
-                <h1 class="trusted-number">700+</h1>
-                <p class="trusted-text">Coaching Classes</p>
+                <h1 class="trusted-number gradient-text">700+</h1>
+                <p class="trusted-text ">Coaching Classes</p>
             </div>
 
         </div>
