anjali pull tha code

--- a/about-us.html
+++ b/about-us.html
@@ -211,8 +211,8 @@
         <!-- Right Images -->
         <div class="col-md-6 d-flex justify-content-center">
             <div>
-                <img src="/mnt/data/b0cdaf52-ff5f-43d7-af48-71344751a2d3.png" class="story-img" alt="story-img">
-                <img src="/mnt/data/b0cdaf52-ff5f-43d7-af48-71344751a2d3.png" class="story-img" alt="story-img">
+                <img src="image/about-us/im1.png" class="story-img" alt="story-img">
+                <img src="image/about-us/im2.png" class="story-img" alt="story-img">
             </div>
         </div>
 
