--- a/careers.html
+++ b/careers.html
@@ -9,139 +9,111 @@
         <!-- swiper slider link -->
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
         <!-- 🔹 NAVBAR -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm py-3">
-            <div class="container">
-                <a class="navbar-brand fs-3 main-logo" href="#">
-                    <img src="image/home/Classpro full website/header/classpro-logo 2 copy.svg" alt>
-                </a>
-                <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#navbarNav"
-                >
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-lg-center">
-                        <!-- FEATURES -->
-                        <li class="nav-item dropdown mx-2 position-static">
-                            <a class="nav-link fw-semibold d-flex align-items-center" href="#" data-bs-toggle="dropdown">
-                                <span class="me-1">Features</span>
-                                <img
-                                    src="image/home/Desktop - Classpro Landing Page/header/Vector 58.svg"
-                                    width="12"
-                                    height="7"
-                                    class="mt-1"
-                                >
-                            </a>
-                            <div class="dropdown-menu mega-dropdown shadow-lg p-4" style="top: 89%;">
-                                <div class="row g-4">
-                                    <div class="col-md-4">
-                                        <div class="feature-item">
-                                            Transparent
-                                            Fee Management
-                                        </div>
-                                        <div class="divider"></div>
-                                        <div class="feature-item">
-                                            Share
-                                            Notes/Study Materials
-                                        </div>
-                                        <div class="divider"></div>
-                                        <div class="feature-item">
-                                            Homework &
-                                            Assignments
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <div class="feature-item">
-                                            Biometric
-                                            Attendance
-                                        </div>
-                                        <div class="divider"></div>
-                                        <div class="feature-item">
-                                            Student
-                                            Performance
-                                        </div>
-                                        <div class="divider"></div>
-                                        <div class="feature-item">
-                                            Insightful
-                                            Reports
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <div class="feature-item">
-                                            Student/Parent
-                                            App
-                                        </div>
-                                        <div class="divider"></div>
-                                        <div class="feature-item">
-                                            Send
-                                            Communication & Reminders
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <!-- COMPANY -->
-                        <li class="nav-item dropdown mx-2">
-                            <a class="nav-link fw-semibold d-flex align-items-center gap-1" href="#" data-bs-toggle="dropdown">
-                                Company
-                                <img
-                                    src="image/home/Desktop - Classpro Landing Page/header/Vector 58.svg"
-                                    width="12"
-                                    height="7"
-                                    class="mt-1"
-                                >
-                            </a>
-                            <div class="dropdown-menu small-dropdown shadow-lg p-4 mt-3">
-                                <div class="feature-item">Career</div>
+           <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm py-3">
+    <div class="container">
+        <a class="navbar-brand fs-3 main-logo" href="index.html">
+            <img src="assets/image/home/Classpro full website/header/classpro-logo 2 copy.svg" alt="image" loading="lazy">
+        </a>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-lg-center">
+
+                <!-- FEATURES -->
+                <li class="nav-item dropdown mx-2 position-static">
+                    <a class="nav-link fw-semibold d-flex align-items-center" href="#" data-bs-toggle="dropdown">
+                        <span class="me-1">Features</span>
+                        <img src="assets/image/home/Desktop - Classpro Landing Page/header/Vector 58.svg" width="12" height="7" class="mt-1" alt="image" loading="lazy">
+                    </a>
+
+                    <div class="dropdown-menu mega-dropdown shadow-lg p-4" style="top: 89%;">
+                        <div class="row g-4">
+                            <div class="col-md-4">
+                                <a href="#" class="feature-item">Transparent Fee Management</a>
                                 <div class="divider"></div>
-                                <div class="feature-item">Team</div>
+                                <a href="#" class="feature-item">Share Notes / Study Materials</a>
                                 <div class="divider"></div>
-                                <div class="feature-item">About</div>
+                                <a href="#" class="feature-item">Homework & Assignments</a>
                             </div>
-                        </li>
-                        <li class="nav-item mx-2">
-                            <a class="nav-link fw-semibold" href="#">Pricing</a>
-                        </li>
-                        <!-- RESOURCES -->
-                        <li class="nav-item dropdown mx-2">
-                            <a class="nav-link fw-semibold d-flex align-items-center gap-1" href="#" data-bs-toggle="dropdown">
-                                Resources
-                                <img
-                                    src="image/home/Desktop - Classpro Landing Page/header/Vector 58.svg"
-                                    width="12"
-                                    height="7"
-                                    class="mt-1"
-                                >
-                            </a>
-                            <div class="dropdown-menu small-dropdown shadow-lg p-4 mt-3">
-                                <div class="feature-item">Blogs</div>
+
+                            <div class="col-md-4">
+                                <a href="#" class="feature-item">Biometric Attendance</a>
                                 <div class="divider"></div>
-                                <div class="feature-item">Testimonials</div>
+                                <a href="#" class="feature-item">Student Performance</a>
+                                <div class="divider"></div>
+                                <a href="#" class="feature-item">Insightful Reports</a>
                             </div>
-                        </li>
-                        <li class="nav-item mx-2">
-                            <a class="nav-link fw-semibold" href="#">
-                                Contact
-                                Us
-                            </a>
-                        </li>
-                        <li class="nav-item ms-2 ms-lg-3">
-                            <button class="btn btn-outline-success px-4 fornw-bg  rounded-pill">
-                                Log In
-                            </button>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+
+                            <div class="col-md-4">
+                                <a href="#" class="feature-item">Student / Parent App</a>
+                                <div class="divider"></div>
+                                <a href="#" class="feature-item">Communication & Reminders</a>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+
+                <!-- COMPANY -->
+                <li class="nav-item dropdown mx-2">
+                    <a class="nav-link fw-semibold d-flex align-items-center gap-1" href="#" data-bs-toggle="dropdown">
+                        Company
+                        <img src="assets/image/home/Desktop - Classpro Landing Page/header/Vector 58.svg" width="12" height="7" class="mt-1" alt="image" loading="lazy">
+                    </a>
+
+                    <div class="dropdown-menu small-dropdown shadow-lg p-4 mt-3">
+                        <a href="careers.html" class="feature-item">Career</a>
+                        <div class="divider"></div>
+                        <a href="team-update.html" class="feature-item">Team</a>
+                        <div class="divider"></div>
+                        <a href="about-us.html" class="feature-item">About</a>
+                    </div>
+                </li>
+
+                <!-- PRICING -->
+                <li class="nav-item mx-2">
+                    <a class="nav-link fw-semibold" href="pricing.html">Pricing</a>
+                </li>
+
+                <!-- RESOURCES -->
+                <li class="nav-item dropdown mx-2">
+                    <a class="nav-link fw-semibold d-flex align-items-center gap-1" href="#" data-bs-toggle="dropdown">
+                        Resources
+                        <img src="assets/image/home/Desktop - Classpro Landing Page/header/Vector 58.svg" width="12" height="7" class="mt-1" alt="image" loading="lazy">
+                    </a>
+
+                    <div class="dropdown-menu small-dropdown shadow-lg p-4 mt-3">
+                        <a href="#" class="feature-item">Blogs</a>
+                        <div class="divider"></div>
+                        <a href="testimonials.html" class="feature-item">Testimonials</a>
+                    </div>
+                </li>
+
+                <!-- CONTACT -->
+                <li class="nav-item mx-2">
+                    <a class="nav-link fw-semibold" href="contact.html">Contact Us</a>
+                </li>
+
+                <!-- LOGIN -->
+                <li class="nav-item ms-2 ms-lg-3">
+                    <a href="login.php" class="btn btn-outline-success px-4 fornw-bg rounded-pill">
+                        Log In
+                    </a>
+                </li>
+
+            </ul>
+        </div>
+    </div>
+</nav>
         <!-- nav bar end -->
+         <!-- main start -->
+        <main>
         <!-- HERO SECTION -->
         <section class="career-hero-section">
             <div class="container">
@@ -153,7 +125,7 @@
                     </div>
                     <div class="col-md-5">
                         <div class="career-image-box">
-                            <img src="image/careers/hero.jpg" alt="Career Image">
+                            <img src="assets/image/careers/hero.jpg" alt="image" loading="lazy">
                         </div>
                     </div>
                 </div>
@@ -168,8 +140,8 @@
                         <div class="col-md-6">
                             <h4 class="job-title">Engineering</h4>
                             <p class="job-meta">
-                                <img src="image/careers/location.svg"> Mumbai &nbsp;&nbsp;
-                                <img src="image/careers/calender.svg">
+                                <img src="assets/image/careers/location.svg" alt="image" loading="lazy"> Mumbai &nbsp;&nbsp;
+                                <img src="assets/image/careers/calender.svg" alt="image" loading="lazy">
                                 26 Nov 2021
                             </p>
                         </div>
@@ -192,8 +164,8 @@
                         <div class="col-md-6">
                             <h4 class="job-title">Developer</h4>
                             <p class="job-meta">
-                                <img src="image/careers/location.svg"> Mumbai &nbsp;&nbsp;
-                                <img src="image/careers/calender.svg">
+                                <img src="assets/image/careers/location.svg" alt="image" loading="lazy"> Mumbai &nbsp;&nbsp;
+                                <img src="assets/image/careers/calender.svg" alt="image" loading="lazy">
                                 26 Nov 2021
                             </p>
                         </div>
@@ -224,7 +196,7 @@
                         tool on top of Zoom which helped in ensuring reliability.
                             </p>
                             <div class="testi-user">
-                                <img src="image/careers/red.png" class="testi-user-img">
+                                <img src="assets/image/careers/red.png" class="testi-user-img" alt="image" loading="lazy">
                                 <div>
                                     <h6 class="testi-user-name">Mahesh Jadhavar</h6>
                                     <span class="testi-user-info">Ariv Education</span>
@@ -241,7 +213,7 @@
                         tool on top of Zoom which helped in ensuring reliability.
                             </p>
                             <div class="testi-user">
-                                <img src="image/careers/red.png" class="testi-user-img">
+                                <img src="assets/image/careers/red.png" class="testi-user-img" alt="image" loading="lazy">
                                 <div>
                                     <h6 class="testi-user-name">Mahesh Jadhavar</h6>
                                     <span class="testi-user-info">Ariv Education</span>
@@ -258,7 +230,7 @@
                         tool on top of Zoom which helped in ensuring reliability.
                             </p>
                             <div class="testi-user">
-                                <img src="image/careers/red.png" class="testi-user-img">
+                                <img src="assets/image/careers/red.png" class="testi-user-img" alt="image" loading="lazy">
                                 <div>
                                     <h6 class="testi-user-name">Mahesh Jadhavar</h6>
                                     <span class="testi-user-info">Ariv Education</span>
@@ -285,7 +257,7 @@
                     <!-- CARD 2 (Image) -->
                     <div class="col-lg-3 col-md-6">
                         <div class="wc-card" style="padding: 0;">
-                            <img src="image/careers/work1.jpg" class="wc-img">
+                            <img src="assets/image/careers/work1.jpg" class="wc-img" alt="image" loading="lazy">
                         </div>
                     </div>
                     <!-- CARD 3 -->
@@ -300,7 +272,7 @@
                     <!-- CARD 4 (Image) -->
                     <div class="col-lg-3 col-md-6">
                         <div class="wc-card" style="padding: 0;">
-                            <img src="image/careers/work2.jpg" class="wc-img">
+                            <img src="assets/image/careers/work2.jpg" class="wc-img" alt="image" loading="lazy">
                         </div>
                     </div>
                     <!-- CARD 5 -->
@@ -315,12 +287,14 @@
                     <!-- CARD 6 (Image) -->
                     <div class="col-lg-3 col-md-6">
                         <div class="wc-card" style="padding: 0;">
-                            <img src="image/careers/work3.png" class="wc-img">
+                            <img src="assets/image/careers/work3.png" class="wc-img" alt="image" loading="lazy">
                         </div>
                     </div>
                 </div>
             </div>
         </section>
+        </main>
+        <!-- main end -->
         <!-- footer -->
         <section class="india-hero pt-5">
             <div class="container py-lg-5 py-sm-3">
@@ -378,8 +352,8 @@
                     <!-- ADMIN APP + RESOURCES -->
                     <div class="col-6 col-md-3">
                         <h6 class="fw-bold mb-3">ADMIN APP</h6>
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" class="img-fluid mb-2" width="130">
-                        <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" class="img-fluid mb-4" width="130">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" class="img-fluid mb-2" width="130" alt="image" loading="lazy">
+                        <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" class="img-fluid mb-4" width="130" alt="image" loading="lazy">
                         <h6 class="fw-bold mb-3">RESOURCES</h6>
                         <p>Free Resources</p>
                         <p>Case Studies</p>
@@ -390,24 +364,5 @@
     </section>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Swiper JS -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script>
-        var swiper = new Swiper(".mySwiper", {
-            slidesPerView: 5,
-            spaceBetween: 30,
-            loop: true,
-            autoplay: {
-                delay: 1500,
-                disableOnInteraction: false,
-            },
-            breakpoints: {
-                320: { slidesPerView: 2 },
-                576: { slidesPerView: 3 },
-                768: { slidesPerView: 4 },
-                992: { slidesPerView: 5 }
-            }
-        });
-    </script>
 </body>
 </html>
