--- a/contact.html
+++ b/contact.html
@@ -10,144 +10,111 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
         <!-- Custom CSS -->
-        <link rel="stylesheet" href="style.css">
-        <style>
-        /* ----------- Contact Section Styling ----------- */
-
-
-        </style>
+        <link rel="stylesheet" href="assets/css/style.css">
     </head>
     <body>
         <!-- 🔹 NAVBAR -->
-        <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm py-3">
-            <div class="container">
-                <a class="navbar-brand fs-3 main-logo" href="#">
-                    <img src="image/home/Classpro full website/header/classpro-logo 2 copy.svg" alt>
-                </a>
-                <button
-                    class="navbar-toggler"
-                    type="button"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#navbarNav"
-                >
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-lg-center">
-                        <!-- FEATURES -->
-                        <li class="nav-item dropdown mx-2 position-static">
-                            <a class="nav-link fw-semibold d-flex align-items-center" href="#" data-bs-toggle="dropdown">
-                                <span class="me-1">Features</span>
-                                <img
-                                    src="image/home/Desktop - Classpro Landing Page/header/Vector 58.svg"
-                                    width="12"
-                                    height="7"
-                                    class="mt-1"
-                                >
-                            </a>
-                            <div class="dropdown-menu mega-dropdown shadow-lg p-4 mt-3">
-                                <div class="row g-4">
-                                    <div class="col-md-4">
-                                        <div class="feature-item">
-                                            Transparent
-                                            Fee Management
-                                        </div>
-                                        <div class="divider"></div>
-                                        <div class="feature-item">
-                                            Share
-                                            Notes/Study Materials
-                                        </div>
-                                        <div class="divider"></div>
-                                        <div class="feature-item">
-                                            Homework &
-                                            Assignments
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <div class="feature-item">
-                                            Biometric
-                                            Attendance
-                                        </div>
-                                        <div class="divider"></div>
-                                        <div class="feature-item">
-                                            Student
-                                            Performance
-                                        </div>
-                                        <div class="divider"></div>
-                                        <div class="feature-item">
-                                            Insightful
-                                            Reports
-                                        </div>
-                                    </div>
-                                    <div class="col-md-4">
-                                        <div class="feature-item">
-                                            Student/Parent
-                                            App
-                                        </div>
-                                        <div class="divider"></div>
-                                        <div class="feature-item">
-                                            Send
-                                            Communication & Reminders
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <!-- COMPANY -->
-                        <li class="nav-item dropdown mx-2">
-                            <a class="nav-link fw-semibold d-flex align-items-center gap-1" href="#" data-bs-toggle="dropdown">
-                                Company
-                                <img
-                                    src="image/home/Desktop - Classpro Landing Page/header/Vector 58.svg"
-                                    width="12"
-                                    height="7"
-                                    class="mt-1"
-                                >
-                            </a>
-                            <div class="dropdown-menu small-dropdown shadow-lg p-4 mt-3">
-                                <div class="feature-item">Career</div>
+           <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm py-3">
+    <div class="container">
+        <a class="navbar-brand fs-3 main-logo" href="index.html">
+            <img src="assets/image/home/Classpro full website/header/classpro-logo 2 copy.svg" alt="image" loading="lazy">
+        </a>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0 align-items-lg-center">
+
+                <!-- FEATURES -->
+                <li class="nav-item dropdown mx-2 position-static">
+                    <a class="nav-link fw-semibold d-flex align-items-center" href="#" data-bs-toggle="dropdown">
+                        <span class="me-1">Features</span>
+                        <img src="assets/image/home/Desktop - Classpro Landing Page/header/Vector 58.svg" width="12" height="7" class="mt-1" alt="image" loading="lazy">
+                    </a>
+
+                    <div class="dropdown-menu mega-dropdown shadow-lg p-4" style="top: 89%;">
+                        <div class="row g-4">
+                            <div class="col-md-4">
+                                <a href="#" class="feature-item">Transparent Fee Management</a>
                                 <div class="divider"></div>
-                                <div class="feature-item">Team</div>
+                                <a href="#" class="feature-item">Share Notes / Study Materials</a>
                                 <div class="divider"></div>
-                                <div class="feature-item">About</div>
+                                <a href="#" class="feature-item">Homework & Assignments</a>
                             </div>
-                        </li>
-                        <li class="nav-item mx-2">
-                            <a class="nav-link fw-semibold" href="#">Pricing</a>
-                        </li>
-                        <!-- RESOURCES -->
-                        <li class="nav-item dropdown mx-2">
-                            <a class="nav-link fw-semibold d-flex align-items-center gap-1" href="#" data-bs-toggle="dropdown">
-                                Resources
-                                <img
-                                    src="image/home/Desktop - Classpro Landing Page/header/Vector 58.svg"
-                                    width="12"
-                                    height="7"
-                                    class="mt-1"
-                                >
-                            </a>
-                            <div class="dropdown-menu small-dropdown shadow-lg p-4 mt-3">
-                                <div class="feature-item">Blogs</div>
+
+                            <div class="col-md-4">
+                                <a href="#" class="feature-item">Biometric Attendance</a>
                                 <div class="divider"></div>
-                                <div class="feature-item">Testimonials</div>
+                                <a href="#" class="feature-item">Student Performance</a>
+                                <div class="divider"></div>
+                                <a href="#" class="feature-item">Insightful Reports</a>
                             </div>
-                        </li>
-                        <li class="nav-item mx-2">
-                            <a class="nav-link fw-semibold" href="#">
-                                Contact
-                                Us
-                            </a>
-                        </li>
-                        <li class="nav-item ms-3">
-                            <button class="btn btn-outline-success px-4 rounded-pill   fornw-bg">
-                                Log In
-                            </button>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
+
+                            <div class="col-md-4">
+                                <a href="#" class="feature-item">Student / Parent App</a>
+                                <div class="divider"></div>
+                                <a href="#" class="feature-item">Communication & Reminders</a>
+                            </div>
+                        </div>
+                    </div>
+                </li>
+
+                <!-- COMPANY -->
+                <li class="nav-item dropdown mx-2">
+                    <a class="nav-link fw-semibold d-flex align-items-center gap-1" href="#" data-bs-toggle="dropdown">
+                        Company
+                        <img src="assets/image/home/Desktop - Classpro Landing Page/header/Vector 58.svg" width="12" height="7" class="mt-1" alt="image" loading="lazy">
+                    </a>
+
+                    <div class="dropdown-menu small-dropdown shadow-lg p-4 mt-3">
+                        <a href="careers.html" class="feature-item">Career</a>
+                        <div class="divider"></div>
+                        <a href="team-update.html" class="feature-item">Team</a>
+                        <div class="divider"></div>
+                        <a href="about-us.html" class="feature-item">About</a>
+                    </div>
+                </li>
+
+                <!-- PRICING -->
+                <li class="nav-item mx-2">
+                    <a class="nav-link fw-semibold" href="pricing.html">Pricing</a>
+                </li>
+
+                <!-- RESOURCES -->
+                <li class="nav-item dropdown mx-2">
+                    <a class="nav-link fw-semibold d-flex align-items-center gap-1" href="#" data-bs-toggle="dropdown">
+                        Resources
+                        <img src="assets/image/home/Desktop - Classpro Landing Page/header/Vector 58.svg" width="12" height="7" class="mt-1" alt="image" loading="lazy">
+                    </a>
+
+                    <div class="dropdown-menu small-dropdown shadow-lg p-4 mt-3">
+                        <a href="#" class="feature-item">Blogs</a>
+                        <div class="divider"></div>
+                        <a href="testimonials.html" class="feature-item">Testimonials</a>
+                    </div>
+                </li>
+
+                <!-- CONTACT -->
+                <li class="nav-item mx-2">
+                    <a class="nav-link fw-semibold" href="contact.html">Contact Us</a>
+                </li>
+
+                <!-- LOGIN -->
+                <li class="nav-item ms-2 ms-lg-3">
+                    <a href="login.php" class="btn btn-outline-success px-4 fornw-bg rounded-pill">
+                        Log In
+                    </a>
+                </li>
+
+            </ul>
+        </div>
+    </div>
+</nav>
         <!-- nav bar end -->
+        <!-- main start -->
+        <main>
         <section class="contact-section container py-5">
             <div class="row justify-content-between align-items-start">
                 <!-- LEFT SIDE FORM -->
@@ -199,6 +166,8 @@
                 </div>
             </div>
         </section>
+         <!-- main end -->
+        </main>
         <!-- footer -->
         <section class="india-hero pt-5">
             <div class="container py-lg-5 py-sm-3">
@@ -216,6 +185,7 @@
                 </div>
             </div>
         </section>
+       
         <!-- FOOTER SECTION -->
         <footer class="footer-section text-white py-5">
             <div class="container">
@@ -256,8 +226,8 @@
                     <!-- ADMIN APP + RESOURCES -->
                     <div class="col-6 col-md-3">
                         <h6 class="fw-bold mb-3">ADMIN APP</h6>
-                        <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" class="img-fluid mb-2" width="130">
-                        <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" class="img-fluid mb-4" width="130">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/7/78/Google_Play_Store_badge_EN.svg" class="img-fluid mb-2" width="130" alt="image" loading="lazy">
+                        <img src="https://developer.apple.com/assets/elements/badges/download-on-the-app-store.svg" class="img-fluid mb-4" width="130" alt="image" loading="lazy">
                         <h6 class="fw-bold mb-3">RESOURCES</h6>
                         <p>Free Resources</p>
                         <p>Case Studies</p>
@@ -268,24 +238,5 @@
     </section>
     <!-- Bootstrap JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-    <!-- Swiper JS -->
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script>
-        var swiper = new Swiper(".mySwiper", {
-            slidesPerView: 5,
-            spaceBetween: 30,
-            loop: true,
-            autoplay: {
-                delay: 1500,
-                disableOnInteraction: false,
-            },
-            breakpoints: {
-                320: { slidesPerView: 2 },
-                576: { slidesPerView: 3 },
-                768: { slidesPerView: 4 },
-                992: { slidesPerView: 5 }
-            }
-        });
-    </script>
 </body>
 </html>
