anjali push tha code

--- a/careers.html
+++ b/careers.html
@@ -190,7 +190,7 @@
                     <!-- Testimonial 1 -->
                     <div class="col-lg-6 col-md-6">
                         <div class="testi-card-box">
-                            <p class="testi-text">
+                            <p class=" job-desc ">
                                 After implementing Classpro for just 10 days in trial we were able to take 40+ new admissions
                         and generate a revenue of 15+ lacs during lockdown period. Classpro provided us with an integrated
                         tool on top of Zoom which helped in ensuring reliability.
@@ -198,8 +198,8 @@
                             <div class="testi-user">
                                 <img src="assets/image/careers/red.png" class="testi-user-img" alt="image" loading="lazy">
                                 <div>
-                                    <h6 class="testi-user-name">Mahesh Jadhavar</h6>
-                                    <span class="testi-user-info">Ariv Education</span>
+                                    <h6 class=" for-headd">Mahesh Jadhavar</h6>
+                                    <span class="for-ariv">Ariv Education</span>
                                 </div>
                             </div>
                         </div>
@@ -207,7 +207,7 @@
                     <!-- Testimonial 2 -->
                     <div class="col-lg-3 col-md-6">
                         <div class="testi-card-box">
-                            <p class="testi-text">
+                            <p class="job-desc">
                                 After implementing Classpro for just 10 days in trial we were able to take 40+ new admissions
                         and generate a revenue of 15+ lacs during lockdown period. Classpro provided us with an integrated
                         tool on top of Zoom which helped in ensuring reliability.
@@ -215,8 +215,8 @@
                             <div class="testi-user">
                                 <img src="assets/image/careers/red.png" class="testi-user-img" alt="image" loading="lazy">
                                 <div>
-                                    <h6 class="testi-user-name">Mahesh Jadhavar</h6>
-                                    <span class="testi-user-info">Ariv Education</span>
+                                    <h6 class=" for-headd">Mahesh Jadhavar</h6>
+                                    <span class="for-ariv">Ariv Education</span>
                                 </div>
                             </div>
                         </div>
@@ -224,7 +224,7 @@
                     <!-- Testimonial 3 -->
                     <div class="col-lg-3 col-md-6">
                         <div class="testi-card-box">
-                            <p class="testi-text">
+                            <p class="job-desc">
                                 After implementing Classpro for just 10 days in trial we were able to take 40+ new admissions
                         and generate a revenue of 15+ lacs during lockdown period. Classpro provided us with an integrated
                         tool on top of Zoom which helped in ensuring reliability.
@@ -232,8 +232,8 @@
                             <div class="testi-user">
                                 <img src="assets/image/careers/red.png" class="testi-user-img" alt="image" loading="lazy">
                                 <div>
-                                    <h6 class="testi-user-name">Mahesh Jadhavar</h6>
-                                    <span class="testi-user-info">Ariv Education</span>
+                                    <h6 class=" for-headd">Mahesh Jadhavar</h6>
+                                    <span class="for-ariv">Ariv Education</span>
                                 </div>
                             </div>
                         </div>
