--- a/careers_details.html
+++ b/careers_details.html
@@ -135,9 +135,9 @@
                     <div class="col-lg-6">
                         <!-- TAGS -->
                         <div class="job-tags mt-3 d-flex flex-wrap gap-2">
-                            <span class="job-tag">JavaScript</span>
-                            <span class="job-tag">React Native</span>
-                            <span class="job-tag">Redux Developer</span>
+                            <span class="job-badge">JavaScript</span>
+                            <span class="job-badge">React Native</span>
+                            <span class="job-badge">Redux Developer</span>
                         </div>
                     </div>
                 </div>
@@ -145,13 +145,13 @@
                 <!-- SECTION 1 -->
                 <div class="job-block mb-5">
                     <h5 class="job-block-title">What we do?</h5>
-                    <p class="job-block-text">
+                    <p class="job-desc">
                         Classpro is India’s leading online software for coaching classes. With 1000+ coaching classes using it 
                 daily in 150+ cities, it is changing the way coaching classes manage their business in India.
                 We are a small team of young, highly enthusiastic, creative and performance-driven people who will do 
                 anything (literally) to deliver the best possible user experience to our customers.
                     </p>
-                    <p class="job-block-text">
+                    <p class="job-desc">
                         Interested to know more about how we use technology? See our engineering blog.
                     </p>
                 </div>
@@ -159,12 +159,12 @@
                 <!-- SECTION 2 -->
                 <div class="job-block mb-5">
                     <h5 class="job-block-title">What are we looking for ?</h5>
-                    <p class="job-block-text">
+                    <p class="job-desc">
                         We are looking for talented Javascript developer who want to join our engineering team to build great 
                 application for Education domain. You will be taking a senior/lead role in building 
                 React / React Native / Javascript applications.
                     </p>
-                    <p class="job-block-text">
+                    <p class="job-desc">
                         The position requires a developer with experience developing modern web applications and mobile web apps 
                 using the latest technology. At Classpro we are using React & Javascript to build our next-generation platform.
                     </p>
