--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@ SMS alerts for parents.."
                             <div class="col-lg-7 col-md-6">
                                 <!-- Testimonial 1 -->
                                 <div class="testimonial-box">
-                                    <p class="mb-3">
+                                    <p class="mb-3 comm-para">
                                         “Most of the tools available in the market were not built for scale. 
                                      After implementing Classpro we are able to teach 1000+ students and 
                                      Classpro provided us with an integrated tool on top of Zoom 
@@ -436,14 +436,14 @@ SMS alerts for parents.."
                                             <img src="assets/image/home/community1.png" alt="image" loading="lazy">
                                         </div>
                                         <div>
-                                            <h6 class="mb-0 fw-bold">Mahesh Jadhavar</h6>
-                                            <small class="text-muted">Ariv Education</small>
+                                            <h6 class="mb-0 for-headd">Mahesh Jadhavar</h6>
+                                            <small class="text-muted for-ariv">Ariv Education</small>
                                         </div>
                                     </div>
                                 </div>
                                 <!-- Testimonial 2 -->
                                 <div class="testimonial-box-2">
-                                    <p class="mb-3">
+                                    <p class="mb-3 comm-para">
                                         “The combination of live teaching, collecting fees, and communicating 
                                      with students all together is what sealed the deal for us.”
                                     </p>
@@ -452,8 +452,8 @@ SMS alerts for parents.."
                                             <img src="assets/image/home/community2.png" alt="image" loading="lazy">
                                         </div>
                                         <div>
-                                            <h6 class="mb-0 fw-bold">Arsalan Bamni</h6>
-                                            <small class="text-muted">Farhaan Tutorials</small>
+                                            <h6 class="mb-0 for-headd">Arsalan Bamni</h6>
+                                            <small class="text-muted  for-ariv">Farhaan Tutorials</small>
                                         </div>
                                     </div>
                                 </div>
